--- a/scss/includes/_loginpage.scss
+++ b/scss/includes/_loginpage.scss
@@ -1,10 +1,10 @@
 #loginpage {
 	background-color: $content-background !important;
+	padding: 34px 0px;
 
 	& h4 {
 		text-align: center;
 		text-transform: uppercase;
-		margin-top: 50px;
 		color: #aaa;
 		text-shadow: 2px 2px #fcfcfc;
 	}
